[tool.poetry]
name = "line-solver-wrapper"
version = "3.0.4"
description = "Queueing theory algorithms in Python (JAR wrapper, not published to PyPI)"
authors = [
    "Giuliano Casale <g.casale@imperial.ac.uk>"
]
license = "BSD-3"
packages = [{include = "line_solver"}]

[tool.poetry.dependencies]
python = ">=3.11"
numpy = "^2.3.3"
matplotlib = "^3.10.6"
jpype1 = "^1.6.0"
pandas = "^2.3.2"
scipy = "^1.16.2"
enum-tools = "^0.13.0"
websockets = "^12.0"

# Optional dependencies
torch = { version = ">=2.0.0", optional = true }

[tool.poetry.extras]
native = ["torch"]
gpu = ["torch"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
nbformat = "^5.10.4"
nbconvert = "^7.16.6"
ipykernel = "^6.30.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


